                changed common_drive()
                changed shutdown()
                added   tParticipantControl var
            CMakeLists.txt
                changed frontend added to ADD_SDLIB_INCLUDEDIR
                changed backend added to ADD_SDLIB_INCLUDEDIR
                changed frontend added to ADD_SDLIB_LIBRARY
                changed backend added to ADD_SDLIB_LIBRARY
        tgfclient/
            gui.h
                added   tGfuiRadioButtonList
                added   tGfuiRadioButton
                added   GfuiDrawRadioButtonList()
                added   GfuiDrawRadioButton()
                added   GfuiReleaseRadioButtonList()
                added   GfuiReleaseRadioButton()
                changed GfuiObject
            guimenu.cpp
                added   GfuiMenuCreateRadioButtonListControl
                added   GfuiMenuBoolToStr()
                changed GfuiMenuControlGetBoolean(): made public and renamed to fit the api function naming scheme.
            guimenu.h
                added   GFMNU_TYPE_RADIO_BUTTON_LIST
                added   GFMNU_ATTR_SELECTED, GFMNU_ATTR_DISTANCE, GFMNU_ATTR_MINIMUM_OF_ONE, GFMNU_ATTR_OPTIONS
            guiobject.cpp
                changed GfuiDraw()
                changed GfuiReleaseObject()
                added   GfuiDrawString() overloaded to support different parameters.
            tgfclient.h
                added   GFUI_RADIOBUTTON and GFUI_RADIOBUTTONLIST
                added   tRadioButtonInfo
                added   tRadioButtonListInfo
                added   tfuiRadioButtonCallback
                added   GfuiMenuCreateRadioButtonListControl()

                added   GfuiMenuBoolToStr()
                added   GfuiMenuControlGetBoolean()
                
                added   GfuiRadioButtonListCreate()
                added   GfuiRadioButtonListSetSelected()
                added   GfuiRadioButtonListGetSelected()
                added   GfuiRadioButtonListSetText()