@@ -57,6 +57,9 @@ Changed:
                 changed backend added to ADD_SDLIB_INCLUDEDIR
                 changed frontend added to ADD_SDLIB_LIBRARY
                 changed backend added to ADD_SDLIB_LIBRARY
+        tgf/
+            tgf.h
+                added GF_LOGGING_ENABLE and GF_LOGGING_DISABLE macro's for clearer code
         tgfclient/
             gui.h
                 added   tGfuiRadioButtonList
